--- a/RMS.App/Views/Employees/CreateDriver.cshtml
+++ b/RMS.App/Views/Employees/CreateDriver.cshtml
@@ -62,7 +62,7 @@
                         <div class="col-md-6">
                             <div class="form-group row">
 
-                                @Html.LabelFor(model => model.EmployeeTypeId, htmlAttributes: new { @class = "control-label col-md-3" })
+                                @Html.LabelFor(model => model.EmployeeTypeId, htmlAttributes: new { @class = "control-label col-md-3 required" })
                                 <div class="col-md-9">
                                     @Html.DropDownList("EmployeeTypeId", null, "Select", htmlAttributes: new { @class = "form-control", @id = "searchableDD1" })
                                     @Html.ValidationMessageFor(model => model.EmployeeTypeId, "", new { @class = "text-danger" })
@@ -147,7 +147,7 @@
                             <br />
                             <div class="form-group row">
                                 <div class="col-md-12">
-                                    <b><strong><u>Mailing/Present Address :</u></strong></b>
+                                    <b><strong><u>Mailing / Present Address :</u></strong></b>
                                     <input name="Addresses.Index" value="0" type="hidden" />
                                 </div>
                             </div>
@@ -166,42 +166,42 @@
                                 </div>
                             </div>
                             <div class="form-group row">
-                                @Html.LabelFor(model => model.AddressViewModel.AddressLine2, htmlAttributes: new { @class = "control-label col-md-3" })
+                                @Html.LabelFor(model => model.AddressViewModel.AddressLine2, htmlAttributes: new { @class = "control-label col-md-3 required" })
                                 <div class="col-md-9">
                                     @Html.Editor("Addresses[0].AddressLine2", null, new { htmlAttributes = new { @class = "form-control", PlaceHolder = "Village: / Moholla:", @id = "addressLine2" } })
                                     @Html.ValidationMessageFor(model => model.AddressViewModel.AddressLine2, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="form-group row">
-                                @Html.LabelFor(model => model.AddressViewModel.PostOffice, htmlAttributes: new { @class = "control-label col-md-3" })
+                                @Html.LabelFor(model => model.AddressViewModel.PostOffice, htmlAttributes: new { @class = "control-label col-md-3 required" })
                                 <div class="col-md-9">
                                     @Html.Editor("Addresses[0].PostOffice", null, new { htmlAttributes = new { @class = "form-control", PlaceHolder = "Post Office", @id = "postOffice" } })
                                     @Html.ValidationMessageFor(model => model.AddressViewModel.PostOffice, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="form-group row">
-                                @Html.LabelFor(model => model.AddressViewModel.PostCode, htmlAttributes: new { @class = "control-label col-md-3" })
+                                @Html.LabelFor(model => model.AddressViewModel.PostCode, htmlAttributes: new { @class = "control-label col-md-3 required" })
                                 <div class="col-md-9">
                                     @Html.Editor("Addresses[0].PostCode", null, new { htmlAttributes = new { @class = "form-control", PlaceHolder = "Post Code", @id = "postCode" } })
                                     @Html.ValidationMessageFor(model => model.AddressViewModel.PostCode, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="form-group row">
-                                @Html.LabelFor(model => model.AddressViewModel.DivisionId, htmlAttributes: new { @class = "control-label col-md-3" })
+                                @Html.LabelFor(model => model.AddressViewModel.DivisionId, htmlAttributes: new { @class = "control-label col-md-3 required" })
                                 <div class="col-md-9">
                                     @Html.DropDownList("Addresses[0].DivisionId", new SelectList(Model.DivisionList, "Id", "Name"), "Select Division", htmlAttributes: new { @class = "form-control", @id = "divisionDD" })
                                     @Html.ValidationMessageFor(model => model.AddressViewModel.DivisionId, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="form-group row">
-                                @Html.LabelFor(model => model.AddressViewModel.DistrictId, htmlAttributes: new { @class = "control-label col-md-3" })
+                                @Html.LabelFor(model => model.AddressViewModel.DistrictId, htmlAttributes: new { @class = "control-label col-md-3 required" })
                                 <div class="col-md-9">
                                     @Html.DropDownList("Addresses[0].DistrictId", new SelectList(""), "Select District", htmlAttributes: new { @class = "form-control", @id = "districtDD" })
 
                                 </div>
                             </div>
                             <div class="form-group row">
-                                @Html.LabelFor(model => model.AddressViewModel.UpazilaId, htmlAttributes: new { @class = "control-label col-md-3" })
+                                @Html.LabelFor(model => model.AddressViewModel.UpazilaId, htmlAttributes: new { @class = "control-label col-md-3 required" })
                                 <div class="col-md-9">
                                     @Html.DropDownList("Addresses[0].UpazilaId", new SelectList(""), "Select Upazila/Thana", htmlAttributes: new { @class = "form-control", @id = "upazilaDD" })
 
@@ -236,42 +236,42 @@
                                 </div>
                             </div>
                             <div class="form-group row">
-                                @Html.LabelFor(model => model.AddressViewModel.AddressLine2, htmlAttributes: new { @class = "control-label col-md-3" })
+                                @Html.LabelFor(model => model.AddressViewModel.AddressLine2, htmlAttributes: new { @class = "control-label col-md-3 required" })
                                 <div class="col-md-9">
                                     @Html.Editor("Addresses[1].AddressLine2", null, new { htmlAttributes = new { @class = "form-control", PlaceHolder = "Village: / Moholla:", @id = "addressLine2p" } })
                                     @Html.ValidationMessageFor(model => model.AddressViewModel.AddressLine2, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="form-group row">
-                                @Html.LabelFor(model => model.AddressViewModel.PostOffice, htmlAttributes: new { @class = "control-label col-md-3" })
+                                @Html.LabelFor(model => model.AddressViewModel.PostOffice, htmlAttributes: new { @class = "control-label col-md-3 required" })
                                 <div class="col-md-9">
                                     @Html.Editor("Addresses[1].PostOffice", null, new { htmlAttributes = new { @class = "form-control", PlaceHolder = "Post Office", @id = "postOfficep" } })
                                     @Html.ValidationMessageFor(model => model.AddressViewModel.PostOffice, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="form-group row">
-                                @Html.LabelFor(model => model.AddressViewModel.PostCode, htmlAttributes: new { @class = "control-label col-md-3" })
+                                @Html.LabelFor(model => model.AddressViewModel.PostCode, htmlAttributes: new { @class = "control-label col-md-3 required" })
                                 <div class="col-md-9">
                                     @Html.Editor("Addresses[1].PostCode", null, new { htmlAttributes = new { @class = "form-control", PlaceHolder = "Post Code", @id = "postCodep" } })
                                     @Html.ValidationMessageFor(model => model.AddressViewModel.PostCode, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="form-group row">
-                                @Html.LabelFor(model => model.AddressViewModel.DivisionId, htmlAttributes: new { @class = "control-label col-md-3" })
+                                @Html.LabelFor(model => model.AddressViewModel.DivisionId, htmlAttributes: new { @class = "control-label col-md-3 required" })
                                 <div class="col-md-9">
                                     @Html.DropDownList("Addresses[1].DivisionId", new SelectList(Model.DivisionList, "Id", "Name"), "Select Division", htmlAttributes: new { @class = "form-control", @id = "divisionDDp" })
                                     @Html.ValidationMessageFor(model => model.AddressViewModel.DivisionId, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="form-group row">
-                                @Html.LabelFor(model => model.AddressViewModel.DistrictId, htmlAttributes: new { @class = "control-label col-md-3" })
+                                @Html.LabelFor(model => model.AddressViewModel.DistrictId, htmlAttributes: new { @class = "control-label col-md-3 required" })
                                 <div class="col-md-9">
                                     @Html.DropDownList("Addresses[1].DistrictId", new SelectList(""), "Select District", htmlAttributes: new { @class = "form-control", @id = "districtDDp" })
 
                                 </div>
                             </div>
                             <div class="form-group row">
-                                @Html.LabelFor(model => model.AddressViewModel.UpazilaId, htmlAttributes: new { @class = "control-label col-md-3" })
+                                @Html.LabelFor(model => model.AddressViewModel.UpazilaId, htmlAttributes: new { @class = "control-label col-md-3 required" })
                                 <div class="col-md-9">
                                     @Html.DropDownList("Addresses[1].UpazilaId", new SelectList(""), "Select Upazila/Thana", htmlAttributes: new { @class = "form-control", @id = "upazilaDDp" })
 
@@ -297,7 +297,7 @@
                 <div class="form-horizontal">
                     <h3 class="col-md-offset-3">Office Info</h3><br />
                     <div class="form-group row">
-                        @Html.LabelFor(model => model.OrganizationId, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.OrganizationId, htmlAttributes: new { @class = "control-label col-md-2 required" })
                         <div class="col-md-4">
                             @Html.DropDownList("OrganizationId", null, "Select", htmlAttributes: new { @class = "form-control", @id = "searchableDD2" })
                             @Html.ValidationMessageFor(model => model.OrganizationId, "", new { @class = "text-danger" })
@@ -305,7 +305,7 @@
                     </div>
 
                     <div class="form-group row">
-                        @Html.LabelFor(model => model.DepartmentId, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.DepartmentId, htmlAttributes: new { @class = "control-label col-md-2 required" })
                         <div class="col-md-4">
                             @Html.DropDownList("DepartmentId", null, "Select", htmlAttributes: new { @class = "form-control", @id = "searchableDD3" })
                             @Html.ValidationMessageFor(model => model.DepartmentId, "", new { @class = "text-danger" })
@@ -314,7 +314,7 @@
 
                     <div class="form-group row">
 
-                        @Html.LabelFor(model => model.DesignationId, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.DesignationId, htmlAttributes: new { @class = "control-label col-md-2 required" })
                         <div class="col-md-4">
                             @Html.DropDownList("DesignationId", null, "Select", htmlAttributes: new { @class = "form-control", @id = "searchableDD4" })
                             @Html.ValidationMessageFor(model => model.DesignationId, "", new { @class = "text-danger" })
