--- a/RMS.App/Views/Employees/GetAllEmployee.cshtml
+++ b/RMS.App/Views/Employees/GetAllEmployee.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<RMS.App.ViewModels.EmployeeViewModel>
 
 @{
-    ViewBag.Title = "Employee And Driver List";
+    ViewBag.Title = "Employee List";
 }
 @section styles
 {
@@ -12,7 +12,7 @@
 
 }
 <div class="container">
-    <h2>Employee And Driver List</h2>
+    <h2>Employee List</h2>
     <hr />
 
     @if (TempData["msg"] != null)
