--- a/RMS.App/Views/AssignRequisitions/Requests.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Requests.cshtml
@@ -49,13 +49,14 @@
                     @Html.DisplayNameFor(model => model.RequisitionNumber)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Requisition.Employee.Designation.Title)
-
-                </th>
-                <th>
                     @Html.DisplayNameFor(model => model.Requisition.Employee.FullName)
 
                 </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.Employee.Designation)
+
+                </th>
+                
                 <th>
                     @Html.DisplayNameFor(model => model.Requisition.StartDateTime)
 
@@ -93,11 +94,12 @@
                             @Html.DisplayFor(modelItem => item.RequisitionNumber)
                         </td>
                         <td>
-                            @Html.DisplayFor(model => item.Requisition.Employee.Designation.Title)
-                        </td>
-                        <td>
                             @Html.DisplayFor(model => item.Requisition.Employee.FullName)
                         </td>
+                        <td>
+                            @Html.DisplayFor(model => item.Requisition.Employee.Designation.Title)
+                        </td>
+                        
                         <td>
                             @Html.DisplayFor(model => item.Requisition.StartDateTime)
                         </td>
@@ -138,13 +140,14 @@
                     @Html.DisplayNameFor(model => model.RequisitionNumber)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Requisition.Employee.Designation.Title)
-
-                </th>
-                <th>
                     @Html.DisplayNameFor(model => model.Requisition.Employee.FullName)
 
                 </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Requisition.Employee.Designation)
+
+                </th>
+                
                 <th>
                     @Html.DisplayNameFor(model => model.Requisition.StartDateTime)
 
