--- a/RMS.App/Views/Departments/Edit.cshtml
+++ b/RMS.App/Views/Departments/Edit.cshtml
@@ -17,7 +17,7 @@
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group row">
-            @Html.LabelFor(model => model.OrganizationId, htmlAttributes: new {@class = "control-label col-md-2"})
+            @Html.LabelFor(model => model.OrganizationId, htmlAttributes: new {@class = "control-label col-md-2 required" })
             <div class="col-md-4">
                 @Html.DropDownList("OrganizationId", null,"Select Organization", htmlAttributes: new {@class = "form-control",@id = "searchableDD2" })
                 @Html.ValidationMessageFor(model => model.OrganizationId, "", new {@class = "text-danger"})
