--- a/RMS.App/Views/Vehicles/Create.cshtml
+++ b/RMS.App/Views/Vehicles/Create.cshtml
@@ -16,7 +16,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group row">
-            @Html.LabelFor(model => model.VehicleTypeId, htmlAttributes: new {@class = "control-label col-md-2"})
+            @Html.LabelFor(model => model.VehicleTypeId, htmlAttributes: new {@class = "control-label col-md-2 required" })
             <div class="col-md-4">
                 @Html.DropDownList("VehicleTypeId", null, "Select", htmlAttributes: new {@class = "form-control", @id = "searchableDD1"})
                 @Html.ValidationMessageFor(model => model.VehicleTypeId, "", new {@class = "text-danger"})
@@ -59,7 +59,7 @@
         </div>
         
         <div class="form-group row">
-            @Html.LabelFor(model => model.SeatCapacity, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.SeatCapacity, htmlAttributes: new { @class = "control-label col-md-2 required" })
             <div class="col-md-2">
                 @Html.EditorFor(model => model.SeatCapacity, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.SeatCapacity, "", new { @class = "text-danger" })
