--- a/RMS.App/Views/Employees/CreateDriver.cshtml
+++ b/RMS.App/Views/Employees/CreateDriver.cshtml
@@ -3,10 +3,10 @@
 @model RMS.App.ViewModels.DriverViewModel
 
 @{
-    ViewBag.Title = "Create Employee";
+    ViewBag.Title = "Create Driver";
 }
 
-<h2>Create Employee</h2>
+<h2>Create Driver</h2>
 <br />
 
 @using (Html.BeginForm())
