--- a/RMS.App/Views/Shared/_LayoutHome.cshtml
+++ b/RMS.App/Views/Shared/_LayoutHome.cshtml
@@ -58,7 +58,7 @@
 <!-- End banner Area -->
 <!-- Start service Area -->
 
-<section class="service-area" style="height: 100vh; min-height: 100vh ; overflow: hidden; clear: both; height: auto;">
+<section class="service-area" style="height: 100vh; min-height: 100vh ; overflow: hidden; clear: both; height: auto; margin-bottom: 20px;">
     <div style="height: 15px;"></div>
     <div class="container">
 
