--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -79,11 +79,11 @@
             <li class="dropdown">
                 @if (@ViewBag.count > 0)
                 {
-                    <button title="Unread notifications" class="btn badge-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown"><span class="caret badge"><i class="fa fa-bell"></i><span class="text-danger font-weight-bold" style="font-size: 16px;">&nbsp; &nbsp; @ViewBag.count</span></span></button>
+                    <button title="Unread notifications" class="btn badge-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown"><span class="caret badge"><i class="fa fa-bell"></i><span class="text-danger font-weight-bold" style="font-size: 16px;"> &nbsp; &nbsp; @ViewBag.count</span></span></button>
                 }
                 else
                 {
-                    <button title="You have no unread notifications" class="btn badge-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown"><span class="caret badge"><i class="fa fa-bell"></i>&nbsp; &nbsp; @ViewBag.count</span></button>
+                    <button title="You have no unread notifications" class="btn badge-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown"><span class="caret badge"><i class="fa fa-bell"></i> &nbsp; &nbsp; @ViewBag.count</span></button>
                 }
 
                 <ul class="dropdown-menu">
@@ -92,7 +92,7 @@
                         var data = ViewBag.Notification;
                         foreach (var dt in data)
                         {
-                            <li><a href="#"> @dt.Employee.FullName &nbsp; @dt.Text &nbsp; Req No:  @dt.Requisition.RequisitionNumber&nbsp;  @dt.NotifyDateTime.ToString("hh:mm tt")</a></li>
+                            <li><a href="@Url.Action("Create","AssignRequisitions",new { requisitionId = dt.RequisitionId})" style="margin: 0 5px;"> @dt.Employee.FullName &nbsp; @dt.Text &nbsp; Req No:  @dt.Requisition.RequisitionNumber &nbsp;  @dt.NotifyDateTime.ToString("hh:mm tt")</a></li>
                             <hr/>
                         }
                         <li class="text-center">New Requiest</li>
