--- a/RMS.App/Views/AssignRequisitions/Details.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Details.cshtml
@@ -14,29 +14,26 @@
             <h4>Assigned Requisition Info :</h4>
             <br/>
             <table class="table table-light table-active table-primary dt-responsive nowrap">
-                <tr>
-                    <td style="width: 35%">@Html.DisplayNameFor(model => model.RequisitionId)</td>
-                    <td>@Html.DisplayFor(model => model.RequisitionId)</td>
-                </tr>
+                
                 <tr>
                     <td>@Html.DisplayNameFor(model => model.RequisitionNumber)</td>
                     <td>@Html.DisplayFor(model => model.RequisitionNumber)</td>
                 </tr>
                 <tr>
                     <td>@Html.DisplayName("Requestor Full Name")</td>
-                    <td>@Html.DisplayFor(model => model.Employee.FullName)</td>
+                    <td>@Html.DisplayFor(model => model.Requisition.Employee.FullName)</td>
                 </tr>
                 <tr>
                     <td>@Html.DisplayName("Designation")</td>
-                    <td>@Html.DisplayFor(model => model.Employee.Designation.Title)</td>
+                    <td>@Html.DisplayFor(model => model.Requisition.Employee.Designation.Title)</td>
                 </tr>
                 <tr>
                     <td>@Html.DisplayNameFor(model => model.Employee.ContactNo)</td>
-                    <td>@Html.DisplayFor(model => model.Employee.ContactNo)</td>
+                    <td>@Html.DisplayFor(model => model.Requisition.Employee.ContactNo)</td>
                 </tr>
                 <tr>
                     <td>@Html.DisplayNameFor(model => model.Employee.Email)</td>
-                    <td>@Html.DisplayFor(model => model.Employee.Email)</td>
+                    <td>@Html.DisplayFor(model => model.Requisition.Employee.Email)</td>
                 </tr>
                 <tr>
                     <td>@Html.DisplayNameFor(model => model.Requisition.RequestFor)</td>
@@ -136,8 +133,19 @@
     </div>
 
     <p>
-        @Html.ActionLink("Edit", "Edit", new { @id = Model.Id }, new { @class = "btn btn-warning" }) &nbsp;
-        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-info" })
+
+        <input type="button" id="btnPrint" value="Print this page" />
+        @*@Html.ActionLink("Edit", "Edit", new { @id = Model.Id }, new { @class = "btn btn-warning" })*@ &nbsp;
+        @Html.ActionLink("Back to List", "Index", null, new {@class = "btn btn-info"})
     </p>
 </div>
-
+@section scripts
+{
+    <script>
+        $(function() {
+            $("#btnPrint").click(function() {
+                window.print();
+            });
+        });
+    </script>
+}
