Complete Request And OnProcess Request Added

--- a/RMS.App/Views/Shared/_Layout.cshtml
+++ b/RMS.App/Views/Shared/_Layout.cshtml
@@ -163,6 +163,14 @@
                                     </div>
                                     <br /><br />
                                     <div class="col-md-12">
+                                        <a class="dropdown-item" href="@Url.Action("CompleteRequest", "AssignRequisitions")"><i class="fa fa-car"></i> Complete Requisitions </a>
+                                    </div>
+                                    <br /><br />
+                                    <div class="col-md-12">
+                                        <a class="dropdown-item" href="@Url.Action("OnProcess", "AssignRequisitions")"><i class="fa fa-car"></i> OnProcess Requisitions </a>
+                                    </div>
+                                    <br /><br />
+                                    <div class="col-md-12">
                                         <a class="dropdown-item" href="@Url.Action("Index", "RequisitionStatus")"><i class="fa fa-car"></i> Requisitions Status </a>
                                     </div>
                                     <br /><br />
