Assign Requisition Vehicle and Driver Status

--- a/RMS.App/Views/AssignRequisitions/OnProcess.cshtml
+++ b/RMS.App/Views/AssignRequisitions/OnProcess.cshtml
@@ -5,11 +5,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>OnProcess</h2>
+<h2>On Execute</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
@@ -39,6 +36,9 @@
             @*@Html.ActionLink("Edit", "Edit", new { id=item.Id }) |*@
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
             @*@Html.ActionLink("Delete", "Delete", new { id=item.Id })*@
+
+            @Html.ActionLink("Check In", "CheckIn", "GatePass", new { id = item.Id }, new { @class = "btn btn-primary" })
+
         </td>
     </tr>
 }
