--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -48,14 +48,14 @@
                             <li>@Html.ActionLink("Requisition Queue", "Index", "Queue")</li>
                             <li>@Html.ActionLink("Send Request", "Create", "Requisitions")</li>
 
-                            <li class="menu-has-children">
+                            @*<li class="menu-has-children">
                                 <a href="#">Gate Pass</a>
 
                                 <ul>
                                     <li>@Html.ActionLink("Check-Out", "Index", "GatePass")</li>
                                     <li>@Html.ActionLink("Check-In", "CheckIn", "GatePass")</li>
                                 </ul>
-                            </li>
+                            </li>*@
                         }
                         
 
