--- a/RMS.App/Views/AssignRequisitions/Index.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Index.cshtml
@@ -1,19 +1,21 @@
-﻿@model IEnumerable<RMS.App.ViewModels.AssignRequisitionViewModel>
+﻿@model IEnumerable<RMS.App.ViewModels.RequisitionStatusViewModel>
 
 @{
-    ViewBag.Title = "Assigned Requisition";
+    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 @section styles
 {
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
-    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet"/>
+    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet" />
 
-    <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css" rel="stylesheet" />
 
 }
 <div class="container">
     <h2>Assigned Requisition</h2>
-    <hr />
+    <hr/>
 
     @if (TempData["msg"] != null)
     {
@@ -21,56 +23,42 @@
             @Html.Raw(TempData["msg"])
         </div>
     }
-@if (TempData["msg1"] != null)
-{
-    <div class="alert alert-info">
-        @Html.Raw(TempData["msg1"])
-    </div>
-}
-    @*<div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-3 col-sm-3 col-3 text-left no-padding">
-                <p>
-
-                </p>
-            </div>
-
-            <div class="col-lg-9 col-sm-9 col-9 text-right no-padding">
-                <p>
-                    @using (Html.BeginForm("Index", "AssignRequisitions", FormMethod.Get))
-                    {
-                        <b>Search by () </b>
-                        @Html.TextBox("searchText")
-                        <input type="submit" value="Search" />
-                    }
-                </p>
-            </div>
+    @if (TempData["msg1"] != null)
+    {
+        <div class="alert alert-info">
+            @Html.Raw(TempData["msg1"])
         </div>
-    </div>*@
-    
-    <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
-        <thead>
-            <tr class="bg-info">
-                <th>
-                    SL
-                </th>
-                <th>
-                    @Html.DisplayName("Driver Name")
-                </th>
-                <th>
-                    @Html.DisplayName("From Place")
-                </th>
-                <th>
-                    @Html.DisplayName("Vehicle Brand Name")
-                </th>
-                <th>
-                    @Html.DisplayName("Vehicle Reg No")
-                </th>
+    }
 
-                <th class="text-center">
-                    Action
-                </th>
-            </tr>
+    <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: auto">
+        <thead>
+        <tr class="bg-info">
+            <th>
+                SL
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Requisition.FromPlace)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Requisition.DestinationPlace)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Requisition.StartDateTime)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Requisition.EndDateTime)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Requisition.SubmitDateTime)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StatusType)
+            </th>
+            <th>
+                Action
+            </th>
+        </tr>
+
         </thead>
         <tbody>
         @{
@@ -83,24 +71,32 @@
                     <tr>
                         <td>
                             @sl
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Employee.FullName)
+
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Requisition.FromPlace)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Vehicle.BrandName)
+                            @Html.DisplayFor(modelItem => item.Requisition.DestinationPlace)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Vehicle.RegNo)
+                            @Html.DisplayFor(modelItem => item.Requisition.StartDateTime)
                         </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Requisition.EndDateTime)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Requisition.SubmitDateTime)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.StatusType,new {@class= "text-danger" })
+                        </td>
+                        <td>
+                            @*@Html.ActionLink("Edit", "Edit", new {id = item.RequisitionId}) |*@
+                            @Html.ActionLink("Details", "Details", new {id = item.Requisition.Id}, new { @class = "btn btn-primary" }) |
+                            @*@Html.ActionLink("Feedback", "Feedback", new {requisitionId = item.Id})*@
+                            @Html.ActionLink("CheckOut", "CheckOut", "GatePass", new { id = item.Id }, new { @class = "btn btn-primary" })
 
-                        <td class="text-right">
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning btn-sm" })
-                            @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary btn-sm" })
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-outline-danger btn-sm" })
                         </td>
                     </tr>
                 }
@@ -108,37 +104,43 @@
             else
             {
                 <tr>
-                    <td class="text-center text-danger" colspan="6"> Data Not Found!</td>
+                    <td class="text-center text-danger" colspan="7"> Data Not Found!</td>
                 </tr>
             }
         }
         </tbody>
         <tfoot>
-            <tr class="bg-secondary text-white">
-                <th>
-                    SL
-                </th>
-                <th>
-                    @Html.DisplayName("Driver Name")
-                </th>
-                <th>
-                    @Html.DisplayName("From Place")
-                </th>
-                <th>
-                    @Html.DisplayName("Vehicle Brand Name")
-                </th>
-                <th>
-                    @Html.DisplayName("Vehicle Reg No")
-                </th>
+        <tr class="bg-secondary text-white">
+            <th>
+                SL
+            </th>
 
-                <th class="text-center">
-                    Action
-                </th>
-            </tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Requisition.FromPlace)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Requisition.DestinationPlace)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Requisition.StartDateTime)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Requisition.EndDateTime)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Requisition.SubmitDateTime)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StatusType)
+            </th>
+            <th>
+                Action
+            </th>
+        </tr>
         </tfoot>
     </table>
 </div>
-
+    
 @section scripts
 {
 
