--- a/RMS.App/Views/GatePass/Edit.cshtml
+++ b/RMS.App/Views/GatePass/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit Requisition Status";
 }
 
-<h2>Edit Requisition Status</h2>
+<h2>Update Requisition Status</h2>
 <hr/>
 
 
@@ -44,7 +44,7 @@
         <div class="form-group row">
             <div class="col-md-2"></div>
             <div class="col-md-5">
-                <input type="submit" value="CheckIn" class="btn btn-success"/> &nbsp;
+                <input type="submit" value="CheckOut" class="btn btn-success"/> &nbsp;
                 @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
             </div>
         </div>
